[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/silent_wolf/Auth/Login.gd" type="Script" id=1]
[ext_resource path="res://addons/silent_wolf/common/SWButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/GameTemplate/GUI/default_theme.tres" type="Theme" id=3]
[ext_resource path="res://addons/GameTemplate/Assets/Fonts/pixellocale_8.tres" type="DynamicFont" id=4]

[node name="Login" type="Panel"]
margin_top = 1.0
margin_right = 321.0
margin_bottom = 182.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="FormContainer" type="VBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 180.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10

[node name="Label" type="Label" parent="FormContainer"]
margin_right = 310.0
margin_bottom = 18.0
text = "LOGIN"
align = 1

[node name="UsernameContainer" type="HBoxContainer" parent="FormContainer"]
margin_top = 28.0
margin_right = 310.0
margin_bottom = 56.0

[node name="Label" type="Label" parent="FormContainer/UsernameContainer"]
margin_top = 5.0
margin_right = 57.0
margin_bottom = 23.0
text = "USERNAME"

[node name="Username" type="LineEdit" parent="FormContainer/UsernameContainer"]
margin_left = 61.0
margin_right = 310.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
max_length = 30
caret_blink = true
caret_blink_speed = 0.5

[node name="PasswordContainer" type="HBoxContainer" parent="FormContainer"]
margin_top = 66.0
margin_right = 310.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="FormContainer/PasswordContainer"]
margin_top = 5.0
margin_right = 56.0
margin_bottom = 23.0
text = "PASSWORD"

[node name="Password" type="LineEdit" parent="FormContainer/PasswordContainer"]
margin_left = 60.0
margin_right = 310.0
margin_bottom = 28.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
max_length = 30
secret = true
caret_blink = true
caret_blink_speed = 0.5

[node name="ErrorMessage" type="Label" parent="FormContainer"]
visible = false
margin_top = 86.0
margin_right = 321.0
margin_bottom = 104.0
custom_colors/font_color = Color( 0.866667, 0.101961, 0.101961, 1 )
autowrap = true

[node name="LoginButton" parent="FormContainer" instance=ExtResource( 2 )]
margin_top = 104.0
margin_right = 310.0
margin_bottom = 128.0
custom_fonts/font = ExtResource( 4 )
text = "SUBMIT"
icon_align = 1

[node name="ProcessingLabel" type="Label" parent="FormContainer"]
visible = false
margin_top = 136.0
margin_right = 314.0
margin_bottom = 154.0
text = "Processing..."
align = 1

[node name="BackButton" parent="FormContainer" instance=ExtResource( 2 )]
margin_top = 138.0
margin_right = 310.0
margin_bottom = 162.0
custom_fonts/font = ExtResource( 4 )
text = "BACK"

[connection signal="pressed" from="FormContainer/LoginButton" to="." method="_on_LoginButton_pressed"]
[connection signal="pressed" from="FormContainer/BackButton" to="." method="_on_BackButton_pressed"]
